scripts for setting up envs + planning and changed some pathing in the conf

--- a/conf/plan_point_maze.yaml
+++ b/conf/plan_point_maze.yaml
@@ -22,12 +22,12 @@ hydra:
             "export MASTER_PORT=$(for port in $(shuf -i 30000-65500 -n 20); do if [[ $(netstat -tupln 2>&1 | grep $port | wc -l) -eq 0 ]] ; then echo $port; break; fi; done;)",]
 
 # model to load for planning
-ckpt_base_path: ./checkpoints # put absolute path here. Checkpoints will be loaded from ${ckpt_base_path}/outputs
-model_name: null
+ckpt_base_path: /projects/prjs1574/dino_wm #Checkpoints will be loaded from ${ckpt_base_path}/outputs
+model_name: point_maze
 model_epoch: latest
 
 seed: 99
-n_evals: 50 
+n_evals: 10 # 50
 goal_source: 'random_state'
 goal_H: 5 
 n_plot_samples: 10
@@ -48,7 +48,7 @@ planner:
     target: planning.cem.CEMPlanner
     horizon: 5
     topk: 30
-    num_samples: 300
+    num_samples: 100 # 300
     var_scale: 1
     opt_steps: 10
     eval_every: 1
