--- a/conf/plan_pusht.yaml
+++ b/conf/plan_pusht.yaml
@@ -22,8 +22,8 @@ hydra:
             "export MASTER_PORT=$(for port in $(shuf -i 30000-65500 -n 20); do if [[ $(netstat -tupln 2>&1 | grep $port | wc -l) -eq 0 ]] ; then echo $port; break; fi; done;)",]
 
 # model to load for planning
-ckpt_base_path: ./checkpoints  # put absolute path here. Checkpoints will be loaded from ${ckpt_base_path}/outputs
-model_name: null
+ckpt_base_path: /projects/prjs1574/dino_wm #Checkpoints will be loaded from ${ckpt_base_path}/outputs
+model_name: pusht
 model_epoch: latest
 
 seed: 99
